--- a/queryDB.ipynb
+++ b/queryDB.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -12,23 +12,9 @@
       "Connected directly to ChromaDB at: ./data/chroma_db\n",
       "\n",
       "Listing all collections found in the database:\n",
-      "-> Found 2 collection(s):\n",
-      "  - Name: cards_collection - Items: 34519\n",
-      "    Random Samples:\n",
-      "        Metadata: {'seq_num': 18774, 'source': 'C:\\\\Users\\\\fwwal\\\\Code\\\\MtgAI\\\\cardsFiltered.json'}\n",
-      "    Random Samples:\n",
-      "        Metadata: {'seq_num': 18774, 'source': 'C:\\\\Users\\\\fwwal\\\\Code\\\\MtgAI\\\\cardsFiltered.json'}\n"
-     ]
-    },
-    {
-     "ename": "TypeError",
-     "evalue": "'int' object is not subscriptable",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[10], line 31\u001b[0m\n\u001b[0;32m     29\u001b[0m     \u001b[38;5;28;01mfor\u001b[39;00m sample \u001b[38;5;129;01min\u001b[39;00m random_samples:\n\u001b[0;32m     30\u001b[0m         \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m        Metadata: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mall_items[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mmetadatas\u001b[39m\u001b[38;5;124m'\u001b[39m][sample]\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m---> 31\u001b[0m         \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m      - Document: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00m\u001b[43msample\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mdocuments\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m]\u001b[49m[sample]\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m     32\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[0;32m     33\u001b[0m     \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m    No items found in this collection.\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
-      "\u001b[1;31mTypeError\u001b[0m: 'int' object is not subscriptable"
+      "-> Found 1 collection(s):\n",
+      "  - Name: cards_collection_google - Items: 0\n",
+      "    No items found in this collection.\n"
      ]
     }
    ],
@@ -70,35 +56,173 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Vector store loaded. Collection 'cards_collection_google' has approx 34504 items.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'Valakut Invoker can deal 3 damage to any target (which includes creatures and players) for eight generic mana.\\n'"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "from langchain_community.vectorstores import Chroma\n",
-    "from langchain_google_genai import GoogleGenerativeAIEmbeddings \n",
+    "from langchain_google_genai import ChatGoogleGenerativeAI, GoogleGenerativeAIEmbeddings \n",
+    "from langchain_core.runnables import RunnablePassthrough\n",
+    "from langchain_core.prompts import ChatPromptTemplate\n",
     "import os\n",
+    "from langchain_core.output_parsers import StrOutputParser\n",
+    "\n",
+    "from langchain.retrievers.self_query.base import SelfQueryRetriever\n",
+    "from langchain.chains.query_constructor.base import AttributeInfo\n",
+    "\n",
     "if not os.getenv(\"GOOGLE_API_KEY\"):\n",
     "    raise ValueError(\"GOOGLE_API_KEY not found in environment variables or gcloud ADC.\")\n",
     "\n",
-    "temp = Chroma\n",
+    "# Card Retriever (Self-Query) - Schema remains the same\n",
+    "card_metadata_field_info = [\n",
+    "    AttributeInfo(name=\"name\", description=\"The name of the Magic: The Gathering card\", type=\"string\"),\n",
+    "    AttributeInfo(name=\"type\", description=\"The type line of the card (e.g., 'Artifact', 'Instant', 'Creature — Elf Druid')\", type=\"string\"),\n",
+    "    AttributeInfo(name=\"set\", description=\"The Magic: The Gathering set the card is from\", type=\"string\"),\n",
+    "    AttributeInfo(name=\"power\", description=\"The power of the creature card\", type=\"string\"),\n",
+    "    AttributeInfo(name=\"toughness\", description=\"The toughness of the creature card\", type=\"string\"),\n",
+    "    AttributeInfo(name=\"mana_cost\", description=\"The mana cost symbols of the card\", type=\"string\"),\n",
+    "]\n",
+    "llm = ChatGoogleGenerativeAI(model=\"gemini-1.5-pro-latest\", temperature=0)\n",
+    "\n",
     "vector_store = Chroma(\n",
     "    persist_directory=\"./data/chroma_db\",\n",
     "    collection_name=\"cards_collection_google\",\n",
     "    embedding_function=GoogleGenerativeAIEmbeddings(model=\"models/embedding-001\"), \n",
     "      \n",
     ")\n",
-    "print(f\"Vector store loaded. Collection '{vector_store._collection.name}' has approx {vector_store._collection.count()} items.\")\n",
+    "card_document_content_description = \"Text content describing a Magic: The Gathering card, including its abilities and stats.\"\n",
+    "template  = \"\"\"Your goal is to structure the user's query to match the request schema provided below.\n",
     "\n",
-    "print (\"Loading Chroma DB...\")\n",
-    "results = vector_store.similarity_search(\n",
-    "    \"Demonic Tutor\",\n",
-    "    k=10\n",
+    "<< Structured Request Schema >>\n",
+    "When responding use a markdown code snippet with a JSON object formatted in the following schema:\n",
+    "\n",
+    "```json\n",
+    "{\n",
+    "    \"query\": string \\ text string to compare to document contents\n",
+    "    \"filter\": string \\ logical condition statement for filtering documents\n",
+    "}\n",
+    "```\n",
+    "\n",
+    "The query string should contain only text that is expected to match the contents of documents. Any conditions in the filter should not be mentioned in the query as well.\n",
+    "\n",
+    "A logical condition statement is composed of one or more comparison and logical operation statements.\n",
+    "\n",
+    "A comparison statement takes the form: `comp(attr, val)`:\n",
+    "- `comp` (eq | ne | gt | gte | lt | lte): comparator\n",
+    "- `attr` (string):  name of attribute to apply the comparison to\n",
+    "- `val` (string): is the comparison value\n",
+    "\n",
+    "A logical operation statement takes the form `op(statement1, statement2, ...)`:\n",
+    "- `op` (and | or): logical operator\n",
+    "- `statement1`, `statement2`, ... (comparison statements or logical operation statements): one or more statements to apply the operation to\n",
+    "\n",
+    "Make sure that you only use the comparators and logical operators listed above and no others.\n",
+    "Make sure that filters only refer to attributes that exist in the data source.\n",
+    "Make sure that filters only use the attributed names with its function names if there are functions applied on them.\n",
+    "Make sure that filters only use format `YYYY-MM-DD` when handling date data typed values.\n",
+    "Make sure that filters take into account the descriptions of attributes and only make comparisons that are feasible given the type of data being stored.\n",
+    "Make sure that filters are only used as needed. If there are no filters that should be applied return \"NO_FILTER\" for the filter value.\n",
+    "\n",
+    "\n",
+    "Structured Request:\n",
+    "```json\n",
+    "{\n",
+    "    \"query\": \"teenager love\",\n",
+    "    \"filter\": \"and(or(eq(\\\"artist\\\", \\\"Taylor Swift\\\"), eq(\\\"artist\\\", \\\"Katy Perry\\\")), lt(\\\"length\\\", 180), eq(\\\"genre\\\", \\\"pop\\\"))\"\n",
+    "}\n",
+    "```\n",
+    "<< Example >>\n",
+    "Data Source:\n",
+    "```json\n",
+    "{\n",
+    "    \"content\": \"Text content describing a Magic: The Gathering card, including its abilities and stats.\",\n",
+    "    \"attributes\": {\n",
+    "    \"name\": {\n",
+    "        \"description\": \"The name of the Magic: The Gathering card\",\n",
+    "        \"type\": \"string\"\n",
+    "    },\n",
+    "    \"type\": {\n",
+    "        \"description\": \"The type line of the card (e.g., 'Artifact', 'Instant', 'Creature \\u2014 Elf Druid')\",\n",
+    "        \"type\": \"string\"\n",
+    "    },\n",
+    "    \"set\": {\n",
+    "        \"description\": \"The Magic: The Gathering set the card is from\",\n",
+    "        \"type\": \"string\"\n",
+    "    },\n",
+    "    \"power\": {\n",
+    "        \"description\": \"The power of the creature card\",\n",
+    "        \"type\": \"string\"\n",
+    "    },\n",
+    "    \"toughness\": {\n",
+    "        \"description\": \"The toughness of the creature card\",\n",
+    "        \"type\": \"string\"\n",
+    "    },\n",
+    "    \"mana_cost\": {\n",
+    "        \"description\": \"The mana cost symbols of the card\",\n",
+    "        \"type\": \"string\"\n",
+    "    }\n",
+    "}\n",
+    "}\n",
+    "```\n",
+    "\n",
+    "User Query:\"\"\"\n",
+    "\n",
+    "\n",
+    "card_retriever_prompt = ChatPromptTemplate.from_template(template)\n",
+    "card_retriever = SelfQueryRetriever.from_llm(\n",
+    "    llm,\n",
+    "    vector_store,\n",
+    "    card_document_content_description,\n",
+    "    card_metadata_field_info,\n",
+    "    verbose=True,\n",
+    "    prompt=card_retriever_prompt,\n",
+    ")\n",
+    "print(f\"Vector store loaded. Collection '{vector_store._collection.name}' has approx {vector_store._collection.count()} items.\")\n",
+    "def format_docs(docs):\n",
+    "    return \"\\n\\n\".join([d.page_content for d in docs])\n",
+    "\n",
+    "template = \"\"\"Answer the question based only on the following context:\n",
+    "\n",
+    "{context}\n",
+    "\n",
+    "Question: {question}\n",
+    "\"\"\"\n",
+    "prompt = ChatPromptTemplate.from_template(template)\n",
+    "\n",
+    "chain = (\n",
+    "    {\"context\": card_retriever | format_docs, \"question\": RunnablePassthrough() }\n",
+    "    | prompt\n",
+    "    | llm\n",
+    "    | StrOutputParser()\n",
     ")\n",
     "\n",
-    "\n",
-    "for res in results:\n",
-    "    print(f\"* {res.page_content} [{res.metadata}]\")"
+    "chain.invoke(\"Find me a card that can deal 3 damage to target creature or player.\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
