Enhance card metadata handling in createVectorStore.py and prepCardData.py; update queryDB.ipynb for improved output and error reporting; add queryVector.py for card retrieval functionality

--- a/queryDB.ipynb
+++ b/queryDB.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -13,8 +13,41 @@
       "\n",
       "Listing all collections found in the database:\n",
       "-> Found 1 collection(s):\n",
-      "  - Name: cards_collection_google - Items: 0\n",
-      "    No items found in this collection.\n"
+      "  - Name: cards_collection_google - Items: 34504\n",
+      "    Random Samples:\n",
+      "        Metadata: {'mana_cost': '{4}{R}{R}', 'name': 'Goblin Goliath', 'oracle_text': 'When this creature enters, create a number of 1/1 red Goblin creature tokens equal to the number of opponents you have.\\n{3}{R}, {T}: If a source you control would deal damage to an opponent this turn, it deals double that damage to that player instead.', 'power': '5', 'seq_num': 2603, 'source': '/Users/rwalsh/Code/MtgAI/data/cardsFiltered.json', 'toughness': '4', 'type': 'Creature — Goblin Mutant'}\n",
+      "      - Document: Card Name: goblin goliath\n",
+      "Mana Cost: four generic mana red mana red mana\n",
+      "Type: creature — goblin mutant\n",
+      "Rules Text:\n",
+      "when this creature enters, create a number of 1/1 red goblin creature tokens equal to the number of opponents you have.\n",
+      "three generic mana{r}, {t}: if a source you control would deal damage to an opponent this turn, it deals double that damage to that player instead.\n",
+      "Stats: power 5 toughness 4\n",
+      "        Metadata: {'mana_cost': '{4}{W}{W}', 'name': 'Sunblast Angel', 'oracle_text': 'Flying\\nWhen this creature enters, destroy all tapped creatures.', 'power': '4', 'seq_num': 18691, 'source': '/Users/rwalsh/Code/MtgAI/data/cardsFiltered.json', 'toughness': '5', 'type': 'Creature — Angel'}\n",
+      "      - Document: Card Name: sunblast angel\n",
+      "Mana Cost: four generic mana white mana white mana\n",
+      "Type: creature — angel\n",
+      "Rules Text:\n",
+      "flying\n",
+      "when this creature enters, destroy all tapped creatures.\n",
+      "Stats: power 4 toughness 5\n",
+      "    Random Samples:\n",
+      "        Metadata: {'mana_cost': '{4}{R}{R}', 'name': 'Goblin Goliath', 'oracle_text': 'When this creature enters, create a number of 1/1 red Goblin creature tokens equal to the number of opponents you have.\\n{3}{R}, {T}: If a source you control would deal damage to an opponent this turn, it deals double that damage to that player instead.', 'power': '5', 'seq_num': 2603, 'source': '/Users/rwalsh/Code/MtgAI/data/cardsFiltered.json', 'toughness': '4', 'type': 'Creature — Goblin Mutant'}\n",
+      "      - Document: Card Name: goblin goliath\n",
+      "Mana Cost: four generic mana red mana red mana\n",
+      "Type: creature — goblin mutant\n",
+      "Rules Text:\n",
+      "when this creature enters, create a number of 1/1 red goblin creature tokens equal to the number of opponents you have.\n",
+      "three generic mana{r}, {t}: if a source you control would deal damage to an opponent this turn, it deals double that damage to that player instead.\n",
+      "Stats: power 5 toughness 4\n",
+      "        Metadata: {'mana_cost': '{4}{W}{W}', 'name': 'Sunblast Angel', 'oracle_text': 'Flying\\nWhen this creature enters, destroy all tapped creatures.', 'power': '4', 'seq_num': 18691, 'source': '/Users/rwalsh/Code/MtgAI/data/cardsFiltered.json', 'toughness': '5', 'type': 'Creature — Angel'}\n",
+      "      - Document: Card Name: sunblast angel\n",
+      "Mana Cost: four generic mana white mana white mana\n",
+      "Type: creature — angel\n",
+      "Rules Text:\n",
+      "flying\n",
+      "when this creature enters, destroy all tapped creatures.\n",
+      "Stats: power 4 toughness 5\n"
      ]
     }
    ],
@@ -56,9 +89,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/usr/local/lib/python3.10/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n",
+      "/var/folders/29/nmbk6h1553v5h_f_pl11t94m0000gn/T/ipykernel_93972/3976424824.py:27: LangChainDeprecationWarning: The class `Chroma` was deprecated in LangChain 0.2.9 and will be removed in 1.0. An updated version of the class exists in the :class:`~langchain-chroma package and should be used instead. To use it run `pip install -U :class:`~langchain-chroma` and import as `from :class:`~langchain_chroma import Chroma``.\n",
+      "  vector_store = Chroma(\n",
+      "/var/folders/29/nmbk6h1553v5h_f_pl11t94m0000gn/T/ipykernel_93972/3976424824.py:27: LangChainDeprecationWarning: The class `Chroma` was deprecated in LangChain 0.2.9 and will be removed in 1.0. An updated version of the class exists in the :class:`~langchain-chroma package and should be used instead. To use it run `pip install -U :class:`~langchain-chroma` and import as `from :class:`~langchain_chroma import Chroma``.\n",
+      "  vector_store = Chroma(\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -69,152 +114,17 @@
     {
      "data": {
       "text/plain": [
-       "'Valakut Invoker can deal 3 damage to any target (which includes creatures and players) for eight generic mana.\\n'"
+       "'Deadly Riposte deals 3 damage to a target tapped creature.  No card in the provided text deals damage to a player.\\n'"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "from langchain_community.vectorstores import Chroma\n",
-    "from langchain_google_genai import ChatGoogleGenerativeAI, GoogleGenerativeAIEmbeddings \n",
-    "from langchain_core.runnables import RunnablePassthrough\n",
-    "from langchain_core.prompts import ChatPromptTemplate\n",
-    "import os\n",
-    "from langchain_core.output_parsers import StrOutputParser\n",
     "\n",
-    "from langchain.retrievers.self_query.base import SelfQueryRetriever\n",
-    "from langchain.chains.query_constructor.base import AttributeInfo\n",
-    "\n",
-    "if not os.getenv(\"GOOGLE_API_KEY\"):\n",
-    "    raise ValueError(\"GOOGLE_API_KEY not found in environment variables or gcloud ADC.\")\n",
-    "\n",
-    "# Card Retriever (Self-Query) - Schema remains the same\n",
-    "card_metadata_field_info = [\n",
-    "    AttributeInfo(name=\"name\", description=\"The name of the Magic: The Gathering card\", type=\"string\"),\n",
-    "    AttributeInfo(name=\"type\", description=\"The type line of the card (e.g., 'Artifact', 'Instant', 'Creature — Elf Druid')\", type=\"string\"),\n",
-    "    AttributeInfo(name=\"set\", description=\"The Magic: The Gathering set the card is from\", type=\"string\"),\n",
-    "    AttributeInfo(name=\"power\", description=\"The power of the creature card\", type=\"string\"),\n",
-    "    AttributeInfo(name=\"toughness\", description=\"The toughness of the creature card\", type=\"string\"),\n",
-    "    AttributeInfo(name=\"mana_cost\", description=\"The mana cost symbols of the card\", type=\"string\"),\n",
-    "]\n",
-    "llm = ChatGoogleGenerativeAI(model=\"gemini-1.5-pro-latest\", temperature=0)\n",
-    "\n",
-    "vector_store = Chroma(\n",
-    "    persist_directory=\"./data/chroma_db\",\n",
-    "    collection_name=\"cards_collection_google\",\n",
-    "    embedding_function=GoogleGenerativeAIEmbeddings(model=\"models/embedding-001\"), \n",
-    "      \n",
-    ")\n",
-    "card_document_content_description = \"Text content describing a Magic: The Gathering card, including its abilities and stats.\"\n",
-    "template  = \"\"\"Your goal is to structure the user's query to match the request schema provided below.\n",
-    "\n",
-    "<< Structured Request Schema >>\n",
-    "When responding use a markdown code snippet with a JSON object formatted in the following schema:\n",
-    "\n",
-    "```json\n",
-    "{\n",
-    "    \"query\": string \\ text string to compare to document contents\n",
-    "    \"filter\": string \\ logical condition statement for filtering documents\n",
-    "}\n",
-    "```\n",
-    "\n",
-    "The query string should contain only text that is expected to match the contents of documents. Any conditions in the filter should not be mentioned in the query as well.\n",
-    "\n",
-    "A logical condition statement is composed of one or more comparison and logical operation statements.\n",
-    "\n",
-    "A comparison statement takes the form: `comp(attr, val)`:\n",
-    "- `comp` (eq | ne | gt | gte | lt | lte): comparator\n",
-    "- `attr` (string):  name of attribute to apply the comparison to\n",
-    "- `val` (string): is the comparison value\n",
-    "\n",
-    "A logical operation statement takes the form `op(statement1, statement2, ...)`:\n",
-    "- `op` (and | or): logical operator\n",
-    "- `statement1`, `statement2`, ... (comparison statements or logical operation statements): one or more statements to apply the operation to\n",
-    "\n",
-    "Make sure that you only use the comparators and logical operators listed above and no others.\n",
-    "Make sure that filters only refer to attributes that exist in the data source.\n",
-    "Make sure that filters only use the attributed names with its function names if there are functions applied on them.\n",
-    "Make sure that filters only use format `YYYY-MM-DD` when handling date data typed values.\n",
-    "Make sure that filters take into account the descriptions of attributes and only make comparisons that are feasible given the type of data being stored.\n",
-    "Make sure that filters are only used as needed. If there are no filters that should be applied return \"NO_FILTER\" for the filter value.\n",
-    "\n",
-    "\n",
-    "Structured Request:\n",
-    "```json\n",
-    "{\n",
-    "    \"query\": \"teenager love\",\n",
-    "    \"filter\": \"and(or(eq(\\\"artist\\\", \\\"Taylor Swift\\\"), eq(\\\"artist\\\", \\\"Katy Perry\\\")), lt(\\\"length\\\", 180), eq(\\\"genre\\\", \\\"pop\\\"))\"\n",
-    "}\n",
-    "```\n",
-    "<< Example >>\n",
-    "Data Source:\n",
-    "```json\n",
-    "{\n",
-    "    \"content\": \"Text content describing a Magic: The Gathering card, including its abilities and stats.\",\n",
-    "    \"attributes\": {\n",
-    "    \"name\": {\n",
-    "        \"description\": \"The name of the Magic: The Gathering card\",\n",
-    "        \"type\": \"string\"\n",
-    "    },\n",
-    "    \"type\": {\n",
-    "        \"description\": \"The type line of the card (e.g., 'Artifact', 'Instant', 'Creature \\u2014 Elf Druid')\",\n",
-    "        \"type\": \"string\"\n",
-    "    },\n",
-    "    \"set\": {\n",
-    "        \"description\": \"The Magic: The Gathering set the card is from\",\n",
-    "        \"type\": \"string\"\n",
-    "    },\n",
-    "    \"power\": {\n",
-    "        \"description\": \"The power of the creature card\",\n",
-    "        \"type\": \"string\"\n",
-    "    },\n",
-    "    \"toughness\": {\n",
-    "        \"description\": \"The toughness of the creature card\",\n",
-    "        \"type\": \"string\"\n",
-    "    },\n",
-    "    \"mana_cost\": {\n",
-    "        \"description\": \"The mana cost symbols of the card\",\n",
-    "        \"type\": \"string\"\n",
-    "    }\n",
-    "}\n",
-    "}\n",
-    "```\n",
-    "\n",
-    "User Query:\"\"\"\n",
-    "\n",
-    "\n",
-    "card_retriever_prompt = ChatPromptTemplate.from_template(template)\n",
-    "card_retriever = SelfQueryRetriever.from_llm(\n",
-    "    llm,\n",
-    "    vector_store,\n",
-    "    card_document_content_description,\n",
-    "    card_metadata_field_info,\n",
-    "    verbose=True,\n",
-    "    prompt=card_retriever_prompt,\n",
-    ")\n",
-    "print(f\"Vector store loaded. Collection '{vector_store._collection.name}' has approx {vector_store._collection.count()} items.\")\n",
-    "def format_docs(docs):\n",
-    "    return \"\\n\\n\".join([d.page_content for d in docs])\n",
-    "\n",
-    "template = \"\"\"Answer the question based only on the following context:\n",
-    "\n",
-    "{context}\n",
-    "\n",
-    "Question: {question}\n",
-    "\"\"\"\n",
-    "prompt = ChatPromptTemplate.from_template(template)\n",
-    "\n",
-    "chain = (\n",
-    "    {\"context\": card_retriever | format_docs, \"question\": RunnablePassthrough() }\n",
-    "    | prompt\n",
-    "    | llm\n",
-    "    | StrOutputParser()\n",
-    ")\n",
-    "\n",
-    "chain.invoke(\"Find me a card that can deal 3 damage to target creature or player.\")"
+    "\n"
    ]
   },
   {
@@ -241,7 +151,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.11"
+   "version": "3.10.9"
   }
  },
  "nbformat": 4,
